@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA
+    - Fix issue 999: Split does not update file references in TOC.
     - Implement issue 1366: TOC window tree should allow collapse and
       expand all.
     - Implement issue 1363: Open and Save file directory inconsistent.
